--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 astroid==2.4.1
+cffi==1.14.0
 click==7.1.2
 colorama==0.4.3
+dnspython==1.16.0
+eventlet==0.25.2
 Flask==1.1.2
+Flask-SocketIO==4.3.0
+greenlet==0.4.15
 gunicorn==20.0.4
 isort==4.3.21
 itsdangerous==1.1.0
@@ -9,7 +14,11 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+monotonic==1.5
+pycparser==2.20
 pylint==2.5.2
+python-engineio==3.12.1
+python-socketio==4.5.1
 six==1.14.0
 toml==0.10.1
 Werkzeug==1.0.1
