--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 astroid==2.4.1
+cachelib==0.1
+certifi==2020.4.5.1
 cffi==1.14.0
+chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 dnspython==1.16.0
 eventlet==0.25.2
 Flask==1.1.2
+Flask-Session==0.3.2
 Flask-SocketIO==4.3.0
 greenlet==0.4.15
 gunicorn==20.0.4
+idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -19,7 +24,9 @@ pycparser==2.20
 pylint==2.5.2
 python-engineio==3.12.1
 python-socketio==4.5.1
+requests==2.23.0
 six==1.14.0
 toml==0.10.1
+urllib3==1.25.9
 Werkzeug==1.0.1
 wrapt==1.12.1
