--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ mccabe==0.6.1
 monotonic==1.5
 pycparser==2.20
 pylint==2.5.2
+python-dotenv==0.13.0
 python-engineio==3.12.1
 python-socketio==4.5.1
 six==1.14.0
