--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.3
 dnspython==1.16.0
 eventlet==0.25.2
 Flask==1.1.2
+Flask-Cors==3.0.8
 Flask-SocketIO==4.3.0
 greenlet==0.4.15
 gunicorn==18.0
