--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.4.2
 astroid==2.4.1
+autopep8==1.5.3
 cachelib==0.1
 certifi==2020.4.5.1
 cffi==1.14.0
@@ -10,6 +11,7 @@ dnspython==1.16.0
 eventlet==0.25.2
 Flask==1.1.2
 Flask-Cors==3.0.8
+flask-marshmallow==0.12.0
 Flask-Migrate==2.5.3
 Flask-SocketIO==4.3.0
 Flask-SQLAlchemy==2.4.3
@@ -22,9 +24,12 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 Mako==1.1.2
 MarkupSafe==1.1.1
+marshmallow==3.6.0
+marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
 monotonic==1.5
 psycopg2-binary==2.8.5
+pycodestyle==2.6.0
 pycparser==2.20
 pylint==2.5.2
 python-dateutil==2.8.1
