--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dnspython==1.16.0
 eventlet==0.25.2
 Flask==1.1.2
 Flask-Cors==3.0.8
+Flask-Login==0.5.0
 flask-marshmallow==0.12.0
 Flask-Migrate==2.5.3
 Flask-SocketIO==4.3.0
